# omnidata

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  download_tools.py  index.ipynb  metadata.py  settings.ini  setup.py  starter_dataset.py
docs/: CNAME  _config.yml  annotator.html  annotator_documentation.html  annotator_source.html  annotator_usage.html  dataloaders.html  download_tool.html  extra.html  index.html  midas.html  omnitools.html  pretrained.html  refocus_augmentation.html  (+8 more)
omnidata_annotator/scripts/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  create_albedo_images.py  create_curvature_images.py  create_curvature_images_new.py  create_curvature_meshes.py  create_depth_euclidean_images.py  create_depth_zbuffer_images.py  create_edge_2d_images.py  create_edge_3d_images.py  create_images_nonblender_utils.py  create_images_utils.py  create_images_utils_orig.py  create_keypoints_2d_images.py  create_keypoints_3d_images.py  create_mask_valid.py  create_normal_images.py  create_rgb_images.py  create_rgb_images_obj_mtl.py  create_rgb_images_replica.py  create_rgb_images_textured (copy).py  create_rgb_images_textured.py  create_segmentation_25d_images.py  create_segmentation_2d_images.py  create_semantic_images.py  create_semantic_images_obj_mtl.py  create_vanishing_points.py  generate_camera_poses.py  generate_points.py  generate_points_smooth_trajectory.py  io_utils.py  load_settings.py  meshlab_principal_curvatures_k1.mlx  meshlab_principal_curvatures_k2.mlx  narf_interest_image.cpp  nonblender_utils.py  obj_to_ply.py  pcl_narf.h  (+7 more)
(+1718 files in other folders)
